client/src/components/styles/DeviceRightDescSaleItem.css
.device-right-desc-sale-item {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 16px;
  overflow: hidden;
}

.device-right-desc-sale-text-wrap {
  box-sizing: border-box;
  padding: 6px;
  border-radius: 10px;
  height: 38px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
}

.device-right-desc-sale-types {
  display: flex;
  gap: 8px;
  margin: 0;
}

.device-right-desc-sale-types > li {
  display: flex;
  align-items: center;
  height: 100%;
}

.device-right-desc-sale-types > li > img {
  border-radius: 6px;
}

.device-right-desc-sale-link-date-wrap {
  display: grid;
  grid-template-columns: 1fr;
  gap: 14px;
}

.device-right-desc-sale-link-date-wrap > a {
  font-size: 1.5rem;
  max-height: 57px;
  overflow: hidden;
}

.device-right-desc-sale-link-date-wrap > p {
  color: rgb(90, 90, 90);
  font-size: 1.3rem;
  max-height: 32px;
  overflow: hidden;
}

